   codecs sent in response to an INVITE to the single most preferred codec.

Applications
------------
 * Added progress option to the app_dial D() option.  When progress DTMF is
   present, those values are sent immediatly upon receiving a PROGRESS message
   regardless if the call has been answered or not.

Functions
---------
 * The CHANNEL() function now supports the "name" option.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 1.6.1 to Asterisk 1.6.2  -------------
------------------------------------------------------------------------------

SIP Changes
-----------
 * Added support for SUBSCRIBE/NOTIFY with dialog-info based call pickups.
   Snom phones use this for call pickup of extensions that the phone is
   subscribed to.
 * Added support for subscribing to a voice mailbox on a remote server and
   making the new/old message count available to local devices.
 * Added support for setting the domain in the URI for caller of an
   outbound call by using the SIPFROMDOMAIN channel variable.
 * Added a new configuration option "remotesecret" for authentication to
   remote services. For backwards compatibility, "secret" still has the
   same function as before, but now you can configure both a remote secret and a
   local secret for mutual authentication.
 * Added a new 'faxdetect=yes|no' configuration option to sip.conf.  When this
   option is enabled, a SIP channel will go to the fax extension (if it exists)
   after T38 is negotiated.  This option is disabled by default.
 * If the channel variable  ATTENDED_TRANSFER_COMPLETE_SOUND is set, 
   the sound will be played to the target of an attended transfer
 * Added two new configuration options, "qualifygap" and "qualifypeers", which allow
   finer control over how many peers Asterisk will qualify and the gap between them
   when all peers need to be qualified at the same time.